# clearpath_robot

./: README  README.md  clearpath_robot.repos  dependencies.repos
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
clearpath_base/: CMakeLists.txt  a200_hardware.xml  j100_hardware.xml  package.xml
clearpath_base/include/clearpath_base/: a200_hardware.hpp  j100_hardware.hpp  j100_hardware_interface.hpp
clearpath_base/include/clearpath_base/horizon_legacy/: Message.h  Message_cmd.h  Message_data.h  Message_request.h  Transport.h  clearpath.h  horizon_legacy_wrapper.h
clearpath_base/launch/: base.launch.py
clearpath_base/src/: a200_hardware.cpp  j100_hardware.cpp  j100_hardware_interface.cpp
clearpath_base/src/horizon_legacy/: Logger.cpp  Message.cpp  Message_cmd.cpp  Message_data.cpp  Message_request.cpp  Number.cpp  Transport.cpp  crc.cpp  horizon_legacy_wrapper.cpp  linux_serial.cpp
clearpath_diagnostics/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_diagnostics/clearpath_diagnostics/: diagnostics_updater  hardware_state_updater  hd_monitor.py
clearpath_diagnostics/clearpath_diagnostics/battery_state/: battery.py  battery_state_control  battery_state_estimator
clearpath_diagnostics/clearpath_diagnostics/battery_state_publisher/: battery.py  battery_state_publisher
clearpath_diagnostics/config/: diagnostics.yaml  robot.yaml
clearpath_diagnostics/launch/: diagnostics.launch.py
clearpath_generator_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_generator_robot/clearpath_generator_robot/launch/: generate_launch  generator.py  sensors.py
clearpath_generator_robot/clearpath_generator_robot/param/: generate_param  generator.py  sensors.py
clearpath_generator_robot/test/: test_generator_launch.py  test_generator_param.py
clearpath_launch_generator/: CMakeLists.txt  package.xml
clearpath_launch_generator/clearpath_launch_generator/: launch_generator  launch_generator.py  launch_writer.py  sensors.py
clearpath_platform/: CMakeLists.txt  a200_hardware.xml  j100_hardware.xml  package.xml
clearpath_platform/debian/: udev
clearpath_platform/include/clearpath_platform/: a200_hardware.hpp  j100_hardware_interface.hpp
clearpath_platform/launch/: platform.launch.py
clearpath_platform/scripts/: check.sh  generate  install
clearpath_platform/services/: clearpath-platform.service  clearpath-robot.service  clearpath-sensors.service
clearpath_platform/src/: a200_hardware.cpp  a200_status.cpp  j100_hardware_interface.cpp
clearpath_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_robot/debian/: udev
clearpath_robot/scripts/: check  generate  grab-diagnostics  install  vcan
clearpath_robot/services/: clearpath-discovery.service  clearpath-manipulators.service  clearpath-platform.service  clearpath-robot.service  clearpath-sensors.service  clearpath-vcan.service
clearpath_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_sensors/config/: chrobotics_um6.yaml  flir_blackfly.yaml  hokuyo_ust10.yaml  image_rectify.yaml  image_resize.yaml  intel_realsense.yaml  luxonis_oakd.yaml  microstrain_gq7.yaml  microstrain_imu.yaml  novatel_smart6.yaml  phidgets_spatial.yaml  redshift_um7.yaml  sick_lms1xx.yaml  stereolabs_zed.yaml  swiftnav_duro.yaml  test.yaml  velodyne_lidar.yaml
clearpath_sensors/debian/: udev
clearpath_sensors/launch/: chrobotics_um6.launch.py  flir_blackfly.launch.py  flir_blackfly.py  garmin_18x.launch.py  hokuyo_ust.launch.py  hokuyo_ust10.launch.py  image_compressed_to_raw.launch.py  image_raw_to_compressed.launch.py  image_raw_to_theora.launch.py  image_rectify.launch.py  image_resize.launch.py  image_theora_to_raw.launch.py  intel_realsense.launch.py  luxonis_oakd.launch.py  microstrain_gq7.launch.py  microstrain_imu.launch.py  novatel_smart6.launch.py  novatel_smart7.launch.py  phidgets_spatial.launch.py  redshift_um7.launch.py  sick_lms1xx.launch.py  stereolabs_zed.launch.py  swiftnav_duro.launch.py  velodyne_lidar.launch.py
debian/: install  postinst
etc/clearpath/: robot.yaml
