<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_robot</name>
  <version>0.0.2</version>
  <description>Clearpath Robot Metapackage</description>
  <author email="rkreinin@clearpathrobotics.com">Roni Kreinin</author>
  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>
  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Metapackage dependencies-->
  <exec_depend>clearpath_generator_robot</exec_depend>
  <exec_depend>clearpath_sensors</exec_depend>

  <!-- Package dependencies-->
  <exec_depend>clearpath_config</exec_depend>
  <exec_depend>clearpath_generator_common</exec_depend>
  <exec_depend>robot_upstart</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
